--- a/Labenu/JS_fundamentals/functions/funcoes-exercicio/exercicio1/index.html
+++ b/Labenu/JS_fundamentals/functions/funcoes-exercicio/exercicio1/index.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
     <title>Exercício 1</title>
     <script src="script.js"></script>
+    <style> body{
+        background-color: rgb(17, 17, 17);
+    }
+        </style>
 </head>
 
 <body>
