--- a/Labenu/JS_fundamentals/functions/funcoes-exercicio/exercicio2/index.html
+++ b/Labenu/JS_fundamentals/functions/funcoes-exercicio/exercicio2/index.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="utf-8">
     <title>Exercício 2</title>
-    <script src="script.js"></script>
+    <script src="script.js"></script>    
+    <style> body {
+        background-color: rgb(17, 17, 17);
+    }
+        </style>
 </head>
 
 <body>
