--- a/Labenu/fundamentals/HTML/html-I-exercicios/exercicio3/exercicio3.html
+++ b/Labenu/fundamentals/HTML/html-I-exercicios/exercicio3/exercicio3.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício 3</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;1,200&display=swap');
         body {
             background-color: rgb(34, 34, 34);
             color: rgb(241, 149, 211);
-            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+            font-family: 'Poppins', sans-serif;
         }
         h1{
             margin-left: 115px;
